--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cursoandroid.cursoandroid.tenda_virtual">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Intents.AdminVerPedidosRexeitados"></activity>
+        <activity android:name=".Intents.EditarDatos"></activity>
+        <activity android:name=".Intents.AdminVerPedidosRexeitados" />
         <activity android:name=".Intents.AdminVerPedidosAceptados" />
         <activity android:name=".Intents.AdminVerPedidosEnTramite" />
         <activity android:name=".Intents.Rexistrarse" />
